Fixed issue with profile contents overlapping each other

--- a/src/DWC_NightOwlProject/DWC_NightOwlProject/wwwroot/css/site.css
+++ b/src/DWC_NightOwlProject/DWC_NightOwlProject/wwwroot/css/site.css
@@ -86,12 +86,14 @@ footer {
 #imginthefooter {
     flex: 1; /* Use flex to allow image to grow and shrink */
     text-align: left; /* Align image to the left */
+    padding-left:5px;
 }
 
 #Company_Name {
     flex: 1; /* Use flex to allow text to grow and shrink */
     text-align: right; /* Align text to the right */
     margin-left: 20px;
+    padding-right: 25px;
 }
 #socials {
     display: flex;
@@ -129,7 +131,7 @@ canvas {
 }
 
 .main{
-    display:flex;
+    display:flow;
     margin-top:115px;
     padding-left:23%;
     padding-right:23%;
